- fix layout issues for details page   http://jira.media-style.com/browse/INGRID-999

--- a/ingrid-portal-base/src/webapp/decorations/layout/ingrid-popup/css/styles.css
+++ b/ingrid-portal-base/src/webapp/decorations/layout/ingrid-popup/css/styles.css
@@ -41,10 +41,10 @@ h1 { font-family: Verdana, Arial, Helvetica, sans-serif ; font-size:105%; font-w
 h2 { font-family: Verdana, Arial, Helvetica, sans-serif; font-size:90%; line-height:120%; font-weight:bold; margin-top:0; margin-bottom:0.8em; }
 h3 { font-family: Verdana, Arial, Helvetica, sans-serif; font-size:80%; line-height:120%; font-weight:bold; margin-top:0.4; margin-bottom:0.3em; }
 
-table.border { border-collapse:collapse; }
+table.border { border-collapse:collapse;}
 table.fullwidth { width:100%; }
-th {font-size: 75%; vertical-align:top; padding:3;}
-td {font-size: 75%; vertical-align:top; padding-left:3px;}
+th {font-size: 75%; vertical-align:top; padding-left:5px;padding-right:53px;}
+td {font-size: 75%; vertical-align:top; padding-left:5px;padding-right:5px;}
 table.formtable td {font-size: 75%; vertical-align:middle; margin:0;}
 td.iconwidth { width:9px; }
 
